hphp/test/slow/reified_generics/async-3.php.expectf
yep

Catchable fatal error: Value returned from function foo() must be of type string, int given in %s on line 11
